--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+
+    <string name="create_adventure_label">Criar Aventura</string>
+    <string name="d_um_nome_a_aventura">Dê um nome a aventura</string>
 </resources>
