--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="edit_adventure_label">Editar Aventura</string>
+    <string name="edit_session_label">Editar Sessão</string>
+    <string name="edit_adventure_title_label">Novo nome para a aventura</string>
+    <string name="edit_session_title_label">Novo nome para a sessão</string>
+    <string name="edit_adventure_description_label">Nova descrição para a aventura</string>
+    <string name="edit_session_summary_label">Nova resumo para a sessão</string>
 </resources>
